--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,25 @@
 spring:
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/querydsl
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+  profiles:
+    include: oauth
+
   jpa:
-    hibernate:
-      ddl-auto: create
+    show-sql: true
     properties:
       hibernate:
-  #      show_sql: true
+        globally_quoted_identifiers: true
+        ddl-auto: create
+        dialect: org.hibernate.dialect.MySQL57Dialect
         format_sql: true
         use_sql_comments: true # jpql 확인
+
+  h2:
+    console:
+      enabled: true
+  datasource:
+    hikari:
+      jdbc-url: jdbc:h2:mem:testdb;MODE=MYSQL
+
+
 
 logging.level:
   org.hibernate.SQL: debug
